Fixed wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ header {
 }
 
 header h1 {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     text-align: center;
     text-transform: uppercase;
@@ -30,8 +30,7 @@ body {
     font-size: 10pt;
 }
 
-main,
-section {
+main {
     display: flex;
     flex-flow: row wrap;
     margin: 0 auto;
